[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Enemigos/Ghost/ghost-sprites.png" type="Texture2D" id=1]
[ext_resource path="res://Scripts/Enemigo.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Menus/5-2.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Armas/LanzaLlamas/efecto_fuego.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Enemigos/StarPng.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Assets/light.png" type="Texture2D" id=6]

[sub_resource type="Animation" id=8]
resource_name = "Appear"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Death"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ), Vector2( 5, 3 ), Vector2( 6, 3 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 9.92

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[node name="Enemigo" type="CharacterBody2D" groups=["Enemy", "Rebote_conexion"]]
light_mask = 2
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 3
position = Vector2( 0, 13 )
texture = ExtResource( 1 )
hframes = 7
vframes = 4

[node name="SpriteTimer" type="Timer" parent="Sprite2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
anims/Appear = SubResource( 8 )
anims/Attack = SubResource( 10 )
anims/Death = SubResource( 9 )
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2( 0, -9 )
scale = Vector2( 2, 2.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4.4 )
scale = Vector2( 0.877177, 0.933302 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Area2D/CollisionShape2D"]
wait_time = 0.5
one_shot = true

[node name="SpriteEfecto" type="Sprite2D" parent="."]
light_mask = 2
position = Vector2( 0, -38 )
scale = Vector2( 0.193396, 0.141026 )
texture = ExtResource( 4 )

[node name="Barra_vida" type="Control" parent="."]
offset_top = -44.0
offset_right = 40.0
offset_bottom = -4.0

[node name="BarraVida" type="Sprite2D" parent="Barra_vida"]
light_mask = 2
position = Vector2( 0, 12 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="Barra_vida/BarraVida"]
light_mask = 2
anchor_right = 0.407
anchor_bottom = 0.755
offset_left = -70.0
offset_top = -3.0
offset_right = 10.171
offset_bottom = -6.06
theme = SubResource( 5 )
theme_override_styles/fg = SubResource( 6 )
theme_override_styles/bg = SubResource( 7 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="Barra_vida_timer" type="Timer" parent="Barra_vida"]

[node name="Hit_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Collision_timer" type="Timer" parent="."]

[node name="FireTick" type="Timer" parent="."]

[node name="StarPng" type="Sprite2D" parent="."]
modulate = Color( 0.960784, 0.729412, 0.0431373, 1 )
position = Vector2( 0, -50 )
scale = Vector2( 0.005, 0.005 )
texture = ExtResource( 5 )

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
texture = ExtResource( 6 )
texture_scale = 0.3
color = Color( 0.313726, 0.658824, 0.776471, 1 )
energy = 0.6
range_item_cull_mask = 2
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0
shadow_item_cull_mask = 2

[connection signal="timeout" from="Sprite2D/SpriteTimer" to="." method="_on_SpriteTimer_timeout"]
[connection signal="timeout" from="Area2D/CollisionShape2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Barra_vida/Barra_vida_timer" to="." method="_on_Barra_vida_timer_timeout"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="Collision_timer" to="." method="_on_Collision_timer_timeout"]
[connection signal="timeout" from="FireTick" to="." method="_on_FireTick_timeout"]
